[gd_scene load_steps=10 format=3 uid="uid://3ssps60qjkbw"]

[ext_resource type="Script" path="res://Huds/BuildButton.gd" id="1_h8wlp"]
[ext_resource type="Texture2D" uid="uid://dn4sn1n8apg20" path="res://Art/Tiny Swords/UI/Buttons/Button_Blue.png" id="1_luvnb"]
[ext_resource type="PackedScene" uid="uid://d02nxltj1pt6s" path="res://Huds/mouse_sprite.tscn" id="2_tj4uc"]
[ext_resource type="Texture2D" uid="uid://danqwuswyqihg" path="res://Art/Tiny Swords/UI/Icons/Regular_08.png" id="2_xxxbd"]
[ext_resource type="Texture2D" uid="uid://csnglku5tv4sq" path="res://Art/Tiny Swords/UI/Buttons/Button_Disable.png" id="3_kyebu"]
[ext_resource type="Texture2D" uid="uid://deu1xbecmon2v" path="res://Art/Tiny Swords/UI/Icons/Disable_08.png" id="4_ym1n5"]
[ext_resource type="Texture2D" uid="uid://doq5mi5utqaa4" path="res://Art/Tiny Swords/UI/Buttons/Button_Blue_Pressed.png" id="5_y4h5q"]
[ext_resource type="Texture2D" uid="uid://cjtmnbrkqjmui" path="res://Art/Tiny Swords/UI/Icons/Pressed_08.png" id="6_y14hy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ni27"]
size = Vector2(50, 58)

[node name="HUD" type="CanvasLayer"]

[node name="Build" type="Node" parent="."]
script = ExtResource("1_h8wlp")

[node name="Button" type="Sprite2D" parent="Build"]
visible = false
position = Vector2(64, 72)
texture = ExtResource("1_luvnb")

[node name="Icon" type="Sprite2D" parent="Build"]
visible = false
position = Vector2(64, 72)
texture = ExtResource("2_xxxbd")

[node name="ButtonDisabled" type="Sprite2D" parent="Build"]
position = Vector2(64, 72)
texture = ExtResource("3_kyebu")

[node name="IconDisabled" type="Sprite2D" parent="Build"]
position = Vector2(64, 72)
texture = ExtResource("4_ym1n5")

[node name="ButtonPressed" type="Sprite2D" parent="Build"]
visible = false
position = Vector2(64, 72)
texture = ExtResource("5_y4h5q")

[node name="IconPressed" type="Sprite2D" parent="Build"]
visible = false
position = Vector2(64, 72)
texture = ExtResource("6_y14hy")

[node name="Area2D" type="Area2D" parent="Build"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Build/Area2D"]
visible = false
position = Vector2(63, 67)
shape = SubResource("RectangleShape2D_8ni27")

[node name="MouseSprite" parent="." instance=ExtResource("2_tj4uc")]
position = Vector2(-104, 32)

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="mouse_entered" from="Build/Area2D" to="Build" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Build/Area2D" to="Build" method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="ButtonTimer" to="Build" method="_on_button_timer_timeout"]
